Fixed background bleed over on mobile devices for hero-bg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,15 +243,6 @@ h6 {
   background-size: cover;
 }
 
-@media (max-width: 768px) {
-  #hero {
-    width: 100%;
-    height: 100vh;
-    background: url("../img/hero-bg.jpg") top left;
-    background-size: auto;
-  }
-}
-
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
@@ -298,8 +289,26 @@ h6 {
 }
 
 @media (max-width: 768px) {
+  #hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/hero-bg.jpg") top left;
+    background-size: auto;
+  }
+
+  #hero:before {
+    content: "";
+    background: rgba(5, 13, 24, 0);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+  }
+
   #hero h1 {
-    font-size: 28px;
+    font-size: 45px;
     line-height: 36px;
   }
 
